--- a/personalPresentation.html
+++ b/personalPresentation.html
@@ -218,7 +218,7 @@
                 <li>
                     <div class="skill1 clear">
                         <h4>HTML/CSS</h4>
-                        <div class="RT"><a href="#">DEMO</a></div>
+                        <div class="RT"><a href="#">DEMO(插入圣杯布局小例子)</a></div>
                     </div>
                     <p>
                         熟悉 Html/CSS，掌握浮动、定位、盒模型、BFC 等核心概念，掌握常见的网页布局(如圣杯、双飞翼)
