--- a/products/9/懒加载.html
+++ b/products/9/懒加载.html
@@ -61,7 +61,7 @@
         <li data-img="http://p1.gexing.com/G1/M00/B8/FE/rBACFFIdf0uztlAuAAGjKiOhk-w959_600x.jpg"><a href="#"><img src="" ></a></li>
         <li data-img="http://p1.gexing.com/G1/M00/B8/FE/rBACFFIdf0vAmMlnAAE8KHFApz0915_600x.jpg"><a href="#"><img src="" ></a></li>
     </ul>
-    <script src="http://apps.bdimg.com/libs/jquery/1.9.1/jquery.js"></script>
+    <script src="http://lib.sinaapp.com/js/jquery/2.0.3/jquery-2.0.3.js"></script>
     <script>
         var clock;
         $(window).on("scroll",function(){
