--- a/products/表单验证.html
+++ b/products/表单验证.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Ajax和表单验证</title>
     <style>
         .TS{
             font-size: 12px;
@@ -44,6 +44,8 @@
          isName: 0 // 0表示可用,1表示用户名已经存在
      }
      * */
+
+    //下面是一个自己封装的ajax和表单验证的xxx
     var ct = document.querySelector('.ct'),
             ipt = document.querySelectorAll('input'),
             TS = document.querySelectorAll('.TS'),
