--- a/personalPresentation.html
+++ b/personalPresentation.html
@@ -71,6 +71,10 @@
             height: 150px;
             border-radius: 55% 50% 0 0;
         }
+        #left-aside .my-resume img{
+            margin-top: 20px;
+            height: 150px;
+        }
         #left-aside .self-skills .name{
             text-align: left;
         }
@@ -204,6 +208,12 @@
                         <i class="iconfont">&#xe754;&#xe754;&#xe754;&#xe754;&#xe618;</i>
                     </li>
                 </ul>
+            </div>
+            <div>
+                <p class="my-resume">
+                    扫一扫 </br></br>也可以查看我的简历哦
+                    <img src="img/nzResume.png">
+                </p>
             </div>
             <div class="favorite">
                     <pre>爱好: 羽球 旱冰 KTV 旅游</pre>
