--- a/products/仿JD/JD.html
+++ b/products/仿JD/JD.html
@@ -13,7 +13,7 @@
 <div class="topbar">
     <div class="wrapper">
         <div class="location-wrapper">
-            <span class="dirction">送至：北京<span class="jd-icon z-arrow"></span></span>
+            <span class="dirction">送至：广州<span class="jd-icon z-arrow"></span></span>
             <ul class="location clearfix">
                 <li class="selected">北京</li>
                 <li>上海</li>
@@ -54,7 +54,7 @@
             </ul>
         </div>
         <ul class="links">
-            <li><a href="javascript:;">张新望</a></li>
+            <li><a href="javascript:;">聂政</a></li>
             <li><a href="javascript:;">退出</a></li>
             <li class="split"></li>
             <li><a href="javascript:;">我的订单</a></li>
