--- a/personalPresentation.html
+++ b/personalPresentation.html
@@ -130,7 +130,9 @@
             font-family: 'Helvetica Neue',Helvetica,'Lucida Grande',Arial,
             'Hiragino Sans GB',微软雅黑,'WenQuanYi Micro Hei',STHeiti,SimSun,sans-serif;
         }
-
+        .self-skills p{
+            text-align: center;
+        }
     </style>
 </head>
 <body>
@@ -180,36 +182,30 @@
                     <li>
                         <p class="html">HTML
                         </p>
+                        <i class="iconfont">&#xe754;&#xe754;&#xe754;&#xe754;&#xe618;</i>
                     </li>
                     <li>
                         <p class="css">CSS
+
                         </p>
+                        <i class="iconfont">&#xe754;&#xe754;&#xe754;&#xe618;&#xe618;</i>
+
                     </li>
                     <li>
                         <p class="JS">JS
                         </p>
+                        <i class="iconfont">&#xe754;&#xe754;&#xe754;&#xe754;&#xe618;</i>
+
                     </li>
                     <li>
                         <p class="jquery">JQUERY
                         </p>
-                    </li>
-                </ul>
-                <ul class="skill">
-                    <li>
-                        <i class="iconfont">&#xe754;&#xe754;&#xe754;&#xe754;&#xe618;</i>
-                    </li>
-                    <li>
-                        <i class="iconfont">&#xe754;&#xe754;&#xe754;&#xe618;&#xe618;</i>
-                    </li>
-                    <li>
-                        <i class="iconfont">&#xe754;&#xe754;&#xe754;&#xe754;&#xe618;</i>
-                    </li>
-                    <li>
                         <i class="iconfont">&#xe754;&#xe754;&#xe754;&#xe754;&#xe618;</i>
                     </li>
                 </ul>
             </div>
             <div>
+                </br></br>
                 <p class="my-resume">
                     扫一扫 </br></br>也可以查看我的简历哦
                     <img src="img/nzResume.png">
