--- a/personalPresentation.html
+++ b/personalPresentation.html
@@ -5,6 +5,9 @@
     <title>ZhengNie</title>
     <link rel="stylesheet" href="iconfont/star/iconfont.css">
     <style>
+        body{
+            font-family:'Helvetica Neue',Helvetica,'Lucida Grande',Arial,'Hiragino Sans GB',微软雅黑,'WenQuanYi Micro Hei',STHeiti,SimSun,sans-serif;
+        }
         html,body,ul,li{
             margin: 0;
             padding: 0;
@@ -107,6 +110,7 @@
             background: #0aaabf;
         }
         .experiance-head{
+            margin-bottom: 10px;
             padding: 20px;
             border-bottom: 1px solid #ccc;
         }
@@ -299,7 +303,7 @@
 
                     </div>
                     <p>
-                        常见轮播的实例,利用fadeIn/fadeOut实现渐变;利用定位和.css()实现滚动轮播;对象原型实现单页多个轮播
+                        常见轮播的实例,利用fadeIn/fadeOut实现渐变;利用定位实现滚动轮播;对象原型实现单页多个轮播
                     </p>
                 </li>
                 <li>
@@ -354,7 +358,7 @@
                         <a href="products/3D相册/3D相册.html" target="_blank">3D相册</a>
                     </div>
                     <p>
-                        利用css3特性做的3D相册
+                        利用CSS3特性做的3D相册
                     </p>
                 </li>
             </ul>
