--- a/personalPresentation.html
+++ b/personalPresentation.html
@@ -63,6 +63,7 @@
             background: #0aaabf;
         }
         #left-aside .showMe img{
+            margin-top: 30%;
             width: 100px;
             height: 100px;
             border: 3px solid #fff;
@@ -140,6 +141,7 @@
     </style>
 </head>
 <body>
+    <script src="http://apps.bdimg.com/libs/jquery/1.9.0/jquery.js"></script>
     <aside id="fixRight">
         <ul>
             <li><a href="http://www.jianshu.com/users/798229bacf62/latest_articles" target="_Blank">Blog</a></li>
