--- a/personalPresentation.html
+++ b/personalPresentation.html
@@ -224,7 +224,7 @@
         </div>
         <div id="mainCt" class="lp">
             <div class="skill-head boldH">
-                Skill、Project .技能、项目
+                Skill &nbsp Project
             </div>
             <ul class="skill">
                 <li>
@@ -273,7 +273,7 @@
                 </li>
             </ul>
             <div id ="products" class="experiance-head boldH">
-                Products .作品
+                Products
             </div>
             <ul class="experiance">
                 <li>
@@ -365,7 +365,7 @@
                 </li>
             </ul>
             <div class="workExperiance-head boldH">
-                Work Experiance .工作经历
+                工作经历
             </div>
             <h4>2014.07~2016.06   &nbsp&nbsp&nbsp&nbsp 广东省食品工业研究所</h4>
         </div>
