--- a/personalPresentation.html
+++ b/personalPresentation.html
@@ -357,7 +357,7 @@
                 <li>
                     <div class="experiance9">
                         <i class="iconfont">&#xe754;</i>
-                        <a href="products/3D相册/3D相册.html" target="_blank">3D相册</a>
+                        <a href="products/3D相册/3Dphoto.html" target="_blank">3D相册</a>
                     </div>
                     <p>
                         利用CSS3特性做的3D相册
