--- a/niezhengLive.html
+++ b/niezhengLive.html
@@ -18,13 +18,13 @@
 </ul>
 <div id="moving-yun"><img src="img/yun1.png"></div>
 <div id="fix-header">
-   <div class="img lf"><img src="img/weChat.PNG"></div>
+   <div class="img lf"><img src="img/rotate4.jpg"></div>
     <div class="my-name lf">
         <p>聂政</p>
-        <p>个人简历</p>
+        <p>前端开发</p>
     </div>
     <h2 class="rf"><a href="#">首页</a></h2>
-    <h2 class="rf"><a href="#">博客心得</a></h2>
+    <h2 class="rf"><a href="http://www.jianshu.com/users/798229bacf62/latest_articles" target="_blank">博客心得</a></h2>
 </div>
 <ul id="bg">
 <div id="bg4"></div>
@@ -36,7 +36,11 @@
 <ul id="main">
     <div id="main0">
         <div class="ct">
-            <div><img src="img/nzPhoto.JPG"></div>
+            <div>
+                <img src="img/nzResume.png">
+                <img src="img/nzPhoto.JPG">
+                <img src="img/nzResume.png">
+            </div>
             <h2>寻觅 发现 &nbsp而不屈服</h2>
             <hr/>
             <h2>我叫聂政</h2>
@@ -133,7 +137,7 @@
     <div id="main3">
         <div class="ct">
             <h1>项目展示</h1>
-            <div class="wrap scroll">
+            <div class="wrap s-r">
                 <div class="div1"><a href="products/3/3.html" target="_blank">静态页面</a></div>
                 <div class="div2"><a href="products/5/nav/nav.html" target="_blank">商品导航</a></div>
                 <div class="div3"><a href="products/5/tab/tab.html" target="_blank">tab切换</a></div>
@@ -146,20 +150,19 @@
             </div>
         </div>
     </div>
-    <!--<div id="main4">-->
-        <!--<div class="ct">-->
-            <!--<div></div>-->
-            <!--<h2>寻觅 发现 &nbsp而不屈服</h2>-->
-            <!--<hr/>-->
-            <!--<h2>我叫聂政</h2>-->
-            <!--<p>26岁</p>-->
-            <!--<p>niezheng05@foxmail.com</p>-->
-            <!--<p>电话:18520128369</p>-->
-        <!--</div>-->
-    <!--</div>-->
+    <div id="main4">
+        <div class="ct">
+            <h1>新的一页 &nbsp&nbsp&nbsp期待与您共同书写</h1>
+                <p>快点扫码勾搭吧</p>
+                <!--<img src="img/movving.gif">-->
+                <img src="img/tel.png" width="250px">
+                <p>Tel:18520128369</p>
+        </div>
+    </div>
 </ul>
 
 <script src="http://cdn.staticfile.org/jquery/2.2.1/jquery.js"></script>
+<script src="js/jQueryMousewheel.js"></script>
 <script src="js/niezhengLive.js"></script>
 </body>
 </html>
