--- a/niezhengLive.html
+++ b/niezhengLive.html
@@ -100,7 +100,7 @@
                     <li>利用Sprite,caniuse等技巧工具，注重性能和浏览器兼容</li>
                     <li>掌握浮动、定位、盒模型、BFC 等CSS核心概念，</li>
                     <li>掌握常见布局方式比如经典的圣杯布局，双飞翼布局等</li>
-                    <li>喜欢玩html5新特性有关的api以及js调用，css3动画，多媒体查询等新特性，欣赏酷炫的网页效果和优美的代码</li>
+                    <li>喜欢玩html5新特性有关的api以及js调用，css3动画，欣赏酷炫的网页效果和优美的代码</li>
                 </ul>
             </div>
             <div class="card">
@@ -113,7 +113,7 @@
             <div class="card">
                 <ul>
                     <li>对js语法，函数，复杂类型有一定的掌握，掌握原生JavaScript的使用</li>
-                    <li>对原声js的闭包，计时器,Dom事件，ajax，校验表单有一定的掌握</li>
+                    <li>对原声js的闭包，Dom事件，ajax，校验表单有一定的掌握</li>
                     <li>掌握原型，对象，继承的原理</li>
                     <li>会封装一些轮播，tab切换，表单验证，ajax懒加载,弹窗等功能进行组装供自己和他人多次使用</li>
                 </ul>
@@ -123,7 +123,6 @@
                     <li>熟悉互联网公司产品流程、前端开发流程、前后端协同开发流程</li>
                     <li>掌握http协议，了解web及网络基础</li>
                     <li>了解CMD、AMD、CommonJS 规范</li>
-                    <li>有移动端的项目经验，熟练Zepto.js的使用，移动端的flex等布局</li>
                     <li>对网页有一定的审美</li>
                 </ul>
             </div>
