--- a/niezhengLive.html
+++ b/niezhengLive.html
@@ -38,7 +38,7 @@
                 <img src="img/nzPhoto.JPG">
                 <div></div>
             </div>
-            <h2>寻觅 发现 &nbsp而不屈服</h2>
+            <h2>做一名有理想的前端</h2>
             <hr/>
             <h2>我叫聂政</h2>
             <p>26岁</p>
@@ -84,35 +84,35 @@
                 </li>
             </ul>
 
-            <p>把一个网页从无到有的过程充满了乐趣和成就感
-                通过无数个小成就感促成了去自学，去找优秀的老师带领着一步一步探索新的web奥妙。
-                唯有学习，青春才能远航</p>
+            <p>把一个网页从无到有的过程充满了乐趣和成就感，所见即所得的乐趣存在于网页开发的每一个细节
+                通过无数个小成就感促成了去学习，去找优秀的团队一步一步探索新的Web奥妙
+                </p>
         </div>
     </div>
     <div id="main2" class="skills">
             <div class="card active">
                 <ul>
-                    <li>对代码可读性、规范性、语义化有一定认识</li>
-                    <li>熟悉Git、Sublime、WebStorm等前端相关工具的使用,熟练使用调试工具进行开发调试。</li>
-                    <li>利用Sprite,caniuse等技巧工具，注重性能和浏览器兼容</li>
-                    <li>掌握浮动、定位、盒模型、BFC 等CSS核心概念，</li>
+                    <li>对代码可读性、规范性、语义化有一定认识.</li>
+                    <li>熟悉Git、Sublime、WebStorm等前端相关工具的使用,熟练使用调试工具进行开发调试</li>
+                    <li>掌握浮动、定位、盒模型、BFC 等CSS核心概念</li>
                     <li>掌握常见布局方式比如经典的圣杯布局，双飞翼布局等</li>
-                    <li>喜欢玩html5新特性有关的api以及js调用，css3动画，欣赏酷炫的网页效果和优美的代码</li>
+                    <li>喜欢HTML5新特性，CSS3动画，欣赏酷炫的网页效果和优美的代码</li>
+                    <li>对代码可读性、规范性、复用性、语义化有一定认识，对CSS兼容有一定经验，能熟练开发符合w3c规范的常见页面</li>
                 </ul>
             </div>
             <div class="card">
                 <ul>
-                    <li>熟练使用jquery常用方法进行Dom操作事件，ajax。</li>
-                    <li>使用jquery制作轮播/回到顶部/stickup/瀑布流/拖拽等功能模块化。</li>
-                    <li>对同源策略，跨域，jsonp的原理有一定的掌握</li>
+                    <li>熟练使用jQuery常用方法进行Dom操作事件，Ajax</li>
+                    <li>使用jQuery制作轮播/回到顶部/stickup/瀑布流/拖拽等功能模块化</li>
+                    <li>对同源策略，跨域，Jsonp的原理有一定的掌握</li>
                 </ul>
             </div>
             <div class="card">
                 <ul>
-                    <li>对js语法，函数，复杂类型有一定的掌握，掌握原生JavaScript的使用</li>
-                    <li>对原声js的闭包，Dom事件，ajax，校验表单有一定的掌握</li>
+                    <li>对JS语法，函数，复杂类型有一定的掌握，掌握原生JavaScript的使用</li>
+                    <li>对原声JS的闭包，DOM事件，Ajax，校验表单有一定的掌握</li>
                     <li>掌握原型，对象，继承的原理</li>
-                    <li>会封装一些轮播，tab切换，表单验证，ajax懒加载,弹窗等功能进行组装供自己和他人多次使用</li>
+                    <li>会封装一些轮播，tab切换，表单验证，懒加载,弹窗等功能进行组装供自己多次使用</li>
                 </ul>
             </div>
             <div class="card">
@@ -124,8 +124,8 @@
                 </ul>
             </div>
         <ul class="nav">
-            <li  class="active">Html&CSS</li>
-            <li class="">Jquery</li>
+            <li  class="active">HTML&CSS</li>
+            <li class="">JQuery</li>
             <li  class="">JavaScript</li>
             <li  class="">Others</li>
         </ul>
